:recycle: add Start to peerDeps

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   ],
   "files": [ "build/" ],
   "main": "build/index.js",
+  "peerDependencies": {
+    "start": "2.x.x"
+  },
   "dependencies": {
     "del": "2.x.x"
   },
