:lipstick: tweak package info

--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "name": "start-clean",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Clean task for Start",
   "keywords": [ "start", "start-task", "clean" ],
   "homepage": "https://github.com/start-runner/clean",
   "repository": "start-runner/clean",
-  "contributors": [
-    "Kir Belevich <kir@soulshine.in> (https://github.com/deepsweet)",
-    "Denis Koltsov <iam@mistadikay.com> (https://github.com/mistadikay)"
-  ],
+  "author": "Kir Belevich <kir@soulshine.in> (https://github.com/deepsweet)",
   "files": [ "build/" ],
   "main": "build/index.js",
   "peerDependencies": {
