--- a/package.json
+++ b/package.json
@@ -9,24 +9,23 @@
   "files": [ "build/" ],
   "main": "build/index.js",
   "dependencies": {
-    "pify": "2.x.x",
     "rimraf": "2.x.x",
     "babel-runtime": "6.x.x"
   },
   "devDependencies": {
     "start-babel-cli": "1.x.x",
-    "start-start-preset": "1.x.x",
+    "start-start-preset": "2.x.x",
 
-    "babel-preset-es2015": "6.5.x",
-    "babel-plugin-transform-runtime": "6.5.x",
-    "babel-plugin-add-module-exports": "0.1.x",
+    "babel-preset-es2015": "6.13.x",
+    "babel-plugin-transform-runtime": "6.12.x",
+    "babel-plugin-add-module-exports": "0.2.x",
 
-    "babel-eslint": ">5.0.0-beta1",
-    "eslint-plugin-babel": "3.1.x",
-    "eslint-config-rebem": "0.3.x",
+    "babel-eslint": "6.1.x",
+    "eslint-plugin-babel": "3.3.x",
+    "eslint-config-rebem": "1.x.x",
 
-    "tape": "4.4.x",
-    "husky": "0.10.x"
+    "tape": "4.6.x",
+    "husky": "0.11.x"
   },
   "scripts": {
     "start": "start-runner start-start-preset",
@@ -34,8 +33,7 @@
     "prepublish": "npm start build"
   },
   "engines": {
-    "node": ">=0.12.0",
-    "npm": ">=2.7.0"
+    "node": ">=0.12.0"
   },
   "license": "MIT"
 }
