--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -14,6 +14,7 @@ environment:
     - nodejs_version: "0.12"
     - nodejs_version: "4"
     - nodejs_version: "5"
+    - nodejs_version: "6"
 
 cache:
   - "%APPDATA%\\npm-cache"
