--- a/package.json
+++ b/package.json
@@ -9,23 +9,22 @@
   "files": [ "build/" ],
   "main": "build/index.js",
   "dependencies": {
-    "rimraf": "2.x.x",
-    "babel-runtime": "6.x.x"
+    "rimraf": "^2.5.4",
+    "pify": "^2.3.0",
+    "babel-runtime": "^6.11.6"
   },
   "devDependencies": {
-    "start-babel-cli": "1.x.x",
-    "start-start-preset": "2.x.x",
-
-    "babel-preset-es2015": "6.13.x",
-    "babel-plugin-transform-runtime": "6.12.x",
-    "babel-plugin-add-module-exports": "0.2.x",
-
-    "babel-eslint": "6.1.x",
-    "eslint-plugin-babel": "3.3.x",
-    "eslint-config-rebem": "1.x.x",
-
-    "tape": "4.6.x",
-    "husky": "0.11.x"
+    "start-babel-cli": "^1.0.0",
+    "start-start-preset": "^2.0.0",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-plugin-transform-runtime": "^6.12.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-eslint": "^6.1.2",
+    "eslint-plugin-babel": "^3.3.0",
+    "eslint-config-rebem": "^1.1.0",
+    "tape": "^4.6.0",
+    "sinon": "^1.17.5",
+    "husky": "^0.11.6"
   },
   "scripts": {
     "start": "start-runner start-start-preset",
